--- a/pages/workshops.html
+++ b/pages/workshops.html
@@ -1,11 +1,18 @@
 ---
 layout: page
-title: Talleres
+title: "Talleres"
+author: "Econ Mentoring Group"
+image: arctic-4.jpg
 ---
-{% for post in site.categories.sample %}
-  <a href="{{ site.github.url }}{{ post.url }}">
-    <div class="featured-posts" {% if post.image %}style="background-image:url({{ site.github.url }}/assets/img/{{ post.image }})"{% endif %}>
-      <h2><span>{{ post.title }}</span></h2>
-    </div>
-  </a>
-{% endfor %}
+
+# Talleres y Charlas Generales
+
+## Calendario de temas
+
+## Eventos e información
+
+# Taller de Introducción a la Academia
+
+## Proceso de selección
+
+## Calendario de temas
