--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@ title: Home
 ================================================== -->    
 <section class="intro full-width">
     <div class="wrapintro">
-        <h1>Jekyll Theme for Marketers</h1>
-        <h2 class="lead">"Affiliates" is a Jekyll theme designed & developed by WowThemesNet, best suitable for affiliate marketing.</h2>    
-        <a href="https://github.com/wowthemesnet/affiliates-jekyll-theme/archive/master.zip" class="btn">Download</a>
+        <h1>EconThaki por una academia diversa</h1>
+        <h2 class="lead">"EconThaki" es una comunidad que promueve una academia equitativa y diversa</h2>  
     </div>
 </section>
 
@@ -19,7 +18,7 @@ title: Home
 <section class="featured-posts">
 
     <div class="section-title">
-        <h2><span>Featured</span></h2>
+        <h2><span>Destacados</span></h2>
     </div>
 
     <div class="row listfeaturedtag">
