--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title: Home
 <section class="featured-posts">
 
     <div class="section-title">
-        <h2><span>Destacados</span></h2>
+        <h2><span>PUBLICACIONES DESTACADAS</span></h2>
     </div>
 
     <div class="row listfeaturedtag">
@@ -54,7 +54,7 @@ title: Home
     <div class="col-sm-8">
 
         <div class="section-title">
-            <h2><span>All Stories</span></h2>    
+            <h2><span>TODOS LAS PUBLICACIONES </span></h2>    
         </div>
 
         <div class="masonrygrid row listrecent">
