--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Contáctanos
+title: Preguntas y Contacto
 ---
 
 <form action="https://formspree.io/f/xpzkaogv" method="POST">
