--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Home
 <section class="intro full-width">
     <div class="wrapintro">
         <h1>EconThaki por una academia diversa</h1>
-        <h2 class="lead">"EconThaki" es una comunidad que promueve una academia equitativa y diversa</h2>  
+        <h2 class="lead">"EconThaki" es una comunidad que promueve una academia equitativa y diversa en economía -y carreras relacionadas- en Latinoamérica y el Caribe</h2>  
     </div>
 </section>
 
@@ -54,7 +54,7 @@ title: Home
     <div class="col-sm-8">
 
         <div class="section-title">
-            <h2><span>TODOS LAS PUBLICACIONES </span></h2>    
+            <h2><span>TODAS LAS PUBLICACIONES </span></h2>    
         </div>
 
         <div class="masonrygrid row listrecent">
