--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Home
 ================================================== -->    
 <section class="intro full-width">
     <div class="wrapintro">
-        <h1>EconThaki por una academia diversa</h1>
+        <h1>EconThaki</h1>
         <h2 class="lead">"EconThaki" es una comunidad que promueve una academia equitativa y diversa en economía -y carreras relacionadas- en Latinoamérica y el Caribe</h2>  
     </div>
 </section>
