--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Preguntas y Contacto
+title: Contacto
 ---
 
 <form action="https://formspree.io/f/xpzkaogv" method="POST">
